force-app/main/default/objects/Legal_Action__c/fields/Date_Executed_Issued__c.field-meta.xml
<CustomField>
    <fullName>Date_Executed_Issued__c</fullName>
    <label>Date Executed/Issued</label>
    <type>Date</type>
</CustomField>