force-app/main/default/objects/Legal_Action__c/fields/Date_Mailed_to_Lodged_with_Court__c.field-meta.xml
<CustomField>
    <fullName>Date_Mailed_to_Lodged_with_Court__c</fullName>
    <label>Date Mailed to/Lodged with Court</label>
    <type>Date</type>
</CustomField>