force-app/main/default/objects/Legal_Action__c/fields/Discovery_Type__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Type__c</fullName>
    <label>Discovery Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Debtor Exam</fullName>
            </value>
            <value>
                <fullName>Deposition - Expert</fullName>
            </value>
            <value>
                <fullName>Deposition - Non-Party</fullName>
            </value>
            <value>
                <fullName>Deposition - Party</fullName>
            </value>
            <value>
                <fullName>Document Productions</fullName>
            </value>
            <value>
                <fullName>Interrogatories - Form</fullName>
            </value>
            <value>
                <fullName>Interrogatories - Special</fullName>
            </value>
            <value>
                <fullName>Investigative Subpoena</fullName>
            </value>
            <value>
                <fullName>Judgment Debtor Exam</fullName>
            </value>
            <value>
                <fullName>Notice to Produce (CCP 1987)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Requests for Admission</fullName>
            </value>
            <value>
                <fullName>Requests for Production</fullName>
            </value>
            <value>
                <fullName>Subpoena</fullName>
            </value>
            <value>
                <fullName>Subpoena Duces Tecum</fullName>
            </value>
            <value>
                <fullName>Trial Subpoena</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>