force-app/main/default/objects/Legal_Action__c/fields/Judgment__c.field-meta.xml
<CustomField>
    <fullName>Judgment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Judgment</label>
    <referenceTo>Judgement__c</referenceTo>
    <relationshipLabel>Legal Actions</relationshipLabel>
    <relationshipName>Legal_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>