force-app/main/default/objects/Legal_Action__c/fields/Pleading_Type__c.field-meta.xml
<CustomField>
    <fullName>Pleading_Type__c</fullName>
    <label>Pleading Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abstract of Judgment</fullName>
            </value>
            <value>
                <fullName>Amended Answer</fullName>
            </value>
            <value>
                <fullName>Amended Complaint</fullName>
            </value>
            <value>
                <fullName>Answer</fullName>
            </value>
            <value>
                <fullName>Bankruptcy Petition</fullName>
            </value>
            <value>
                <fullName>Chapter 11 Plan (Bankruptcy)</fullName>
            </value>
            <value>
                <fullName>Chapter 13 Plan (Bankruptcy)</fullName>
            </value>
            <value>
                <fullName>Claim of Exemption</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Cross-Answer</fullName>
            </value>
            <value>
                <fullName>Cross-Complaint</fullName>
            </value>
            <value>
                <fullName>Demurrer</fullName>
            </value>
            <value>
                <fullName>Memorandum of Costs after Judgment</fullName>
            </value>
            <value>
                <fullName>Objection</fullName>
            </value>
            <value>
                <fullName>Petition to Compel</fullName>
            </value>
            <value>
                <fullName>Proof of Claim</fullName>
            </value>
            <value>
                <fullName>Renewal of Judgment</fullName>
            </value>
            <value>
                <fullName>Stipulation</fullName>
            </value>
            <value>
                <fullName>Summons</fullName>
            </value>
            <value>
                <fullName>Writ of Attachment</fullName>
            </value>
            <value>
                <fullName>Writ of Execution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>