force-app/main/default/objects/Legal_Action__c/fields/Propounding_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Propounding_Party_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propounding Party Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Legal Action as Propounding Party</relationshipLabel>
    <relationshipName>Legal_Action_as_Propounding_Party</relationshipName>
    <type>Lookup</type>
</CustomField>