force-app/main/default/objects/Legal_Action__c/fields/Responding_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Responding_Party_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responding Party Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Legal Action as Responding Party</relationshipLabel>
    <relationshipName>Legal_Action_as_Responding_Party</relationshipName>
    <type>Lookup</type>
</CustomField>