force-app/main/default/objects/Legal_Action__c/recordTypes/Pleading_Process.recordType-meta.xml
<RecordType>
    <fullName>Pleading_Process</fullName>
    <active>true</active>
    <label>Pleading/Process</label>
</RecordType>